# discord_snowflake

./: .gitignore  README.md  pyproject.toml
snowflake/: __init__.py  snowflake.py
tests/: test_snowflake.py
