[tool.poetry]
name = "snowflake"
version = "0.1.0"
description = "Simple implementation of the Discord snowflake API"
authors = ["Celeo <mattboulanger@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
